<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kristensharkey.tech_interview_practice.OtherResources"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addRes"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LLHeader"
        android:textAlignment="center"
        android:textSize="28sp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@string/linkGforG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/linkGforG"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />
    <TextView
        android:id="@string/linkCMU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/linkCMU"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TreeHeader"
        android:textAlignment="center"
        android:textSize="28sp"/>
    <TextView
        android:id="@string/linkTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/linkTest"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />
    <TextView
        android:id="@string/linkTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/linkTest"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

</LinearLayout>
