<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kristensharkey.tech_interview_practice.MainActivity">


    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#003399"
        android:background="#CCCCCC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInFront"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/SignInFront"
        android:textAlignment="center"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="goToSignIn"/>

    <Button
        android:id="@+id/Register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textAlignment="center"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="goToRegister"/>



</LinearLayout>
